funcmap_tests/tests/ui/compat/func_marker_sealed.stderr
error[E0277]: the trait bound `T: funcmap::private::Sealed<T>` is not satisfied
 --> tests/ui/compat/func_marker_sealed.rs:5:24
  |
5 | impl FuncMarker<T> for T {}
  |                        ^ the trait `funcmap::private::Sealed<T>` is not implemented for `T`
  |
  = help: the trait `funcmap::private::Sealed<TypeParam<N>>` is implemented for `TypeParam<N>`
note: required by a bound in `FuncMarker`
 --> $WORKSPACE/funcmap/src/lib.rs
  |
  | pub trait FuncMarker<P>: private::Sealed<P> {}
  |                          ^^^^^^^^^^^^^^^^^^ required by this bound in `FuncMarker`
  = note: `FuncMarker` is a "sealed trait", because to implement it you also need to implelement `funcmap::private::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
